--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main  id="content" class="main-content">
         <section class="main-section">
             <div class="column">
                 <a class="category">EHS</a>
@@ -35,6 +35,7 @@
                 <a target="_blank" href="https://kimberlyclark.sharepoint.com/Sites/H945/Suzano/Forms/AllItems.aspx?viewid=c20eff85%2Daf0a%2D4b76%2Dab1f%2D5816f085532c&id=%2FSites%2FH945%2FSuzano%2FSEGURAN%C3%87A%2FDialogo%20de%20Seguran%C3%A7a">
                     <button class="button">DDS</button>
                 </a>
+                <img id="herobrine" src="image/" alt="Important Image">
                 <a target="_blank" href="">
                     <button class="button">PFRA Operadores</button>
                 </a>
