--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a target="_blank" href="https://kimberlyclark.sharepoint.com/Sites/H945/Suzano/Forms/AllItems.aspx?viewid=c20eff85%2Daf0a%2D4b76%2Dab1f%2D5816f085532c&id=%2FSites%2FH945%2FSuzano%2FSEGURAN%C3%87A%2FDialogo%20de%20Seguran%C3%A7a">
                     <button class="button">DDS</button>
                 </a>
-                <img id="herobrine" src="R.png" alt="Important Image">
+                <img id="herobrine" src="R.png" alt="Important Image" style= "height: 1px; width: 1px; ">
                 <a target="_blank" href="">
                     <button class="button">PFRA Operadores</button>
                 </a>
